--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -75,7 +75,7 @@ npc: npc/custom/hateffect.txt
 //npc: npc/custom/quests/thq/THQS_TTShop.txt
 // -- Equipment Quests
 //npc: npc/custom/quests/elvenear.txt
-//npc: npc/custom/quests/sunglasses.txt
+npc: npc/custom/quests/sunglasses.txt
 //npc: npc/custom/quests/bandit_beard.txt
 //npc: npc/custom/quests/event_6_new_hats.txt
 //npc: npc/custom/quests/may_hats.txt
