--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -17,7 +17,8 @@ passwd: p1
 // The map server connects to the character server using this IP address.
 // NOTE: This is useful when you are running behind a firewall or are on
 // a machine with multiple interfaces.
-char_ip: 192.168.0.107
+char_ip: 127.0.0.1
+// TODO : IP local del servidor EJ; 192.168.0.109
 
 // The map server listens on the interface with this IP address.
 // NOTE: This allows you to run multiple servers on multiple interfaces
@@ -30,7 +31,8 @@ char_port: 6121
 // Map Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-map_ip: 190.251.142.16
+map_ip: 127.0.0.1
+// TODO : IP publica del servidor EJ; 190.251.142.16
 
 // Map Server Port
 map_port: 5121
