--- a/conf/subnet_athena.conf
+++ b/conf/subnet_athena.conf
@@ -4,4 +4,5 @@
 // you can add more than one subnet (max 16)
 // check is if((net-submask & char_ip ) == (net-submask & servip)) => ok
 
-subnet: 255.0.0.0:190.251.142.16:190.251.142.16
+// TODO : IP publica del servidor EJ: 255.0.0.0:190.251.142.16:190.251.142.16
+subnet: 255.0.0.0:127.0.0.1:127.0.0.1
