--- a/conf/web_athena.conf
+++ b/conf/web_athena.conf
@@ -7,7 +7,8 @@
 // The web server listens on the interface with this IP address.
 // NOTE: This allows you to run multiple servers on multiple interfaces
 // while using the same ports for each server.
-bind_ip: 192.168.0.107
+bind_ip: 127.0.0.1
+// TODO : IP local del servidor EJ; 192.168.0.109
  
 // Web Server Port
 web_port: 8888
