--- a/db/pre-re/skill_db.yml
+++ b/db/pre-re/skill_db.yml
@@ -34221,3 +34221,16 @@ Body:
       IgnoreKagehumi: true
     CastCancel: true
     Duration2: 300000
+  - Id: 10019
+    Name: GD_EMERGENCY_MOVE
+    Description: Emergency Move
+    MaxLevel: 1
+    TargetType: Self
+    DamageFlags:
+      NoDamage: true
+      Splash: true
+    Flags:
+      IsGuild: true
+    SplashArea: 15
+    Duration1: 15000
+    Cooldown: 60000
