--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -31,47 +31,47 @@ emblem_transparency_limit: 80
 // and you have localhost, switch it to 127.0.0.1
 
 // MySQL Login server
-login_server_ip: 127.0.0.1
+login_server_ip: mysql.railway.internal
 login_server_port: 3306
 login_server_id: root
-login_server_pw: ragnarok
+login_server_pw: SanZtvgUFAgXSPGjqozTYBoFoOcSGfuQ
 login_server_db: ragnarok
 login_codepage:
 login_case_sensitive: no
 
-ipban_db_ip: 127.0.0.1
+ipban_db_ip: mysql.railway.internal
 ipban_db_port: 3306
 ipban_db_id: root
-ipban_db_pw: ragnarok
+ipban_db_pw: SanZtvgUFAgXSPGjqozTYBoFoOcSGfuQ
 ipban_db_db: ragnarok
 ipban_codepage:
 
 // MySQL Character server
-char_server_ip: 127.0.0.1
+char_server_ip: mysql.railway.internal
 char_server_port: 3306
 char_server_id: root
-char_server_pw: ragnarok
+char_server_pw: SanZtvgUFAgXSPGjqozTYBoFoOcSGfuQ
 char_server_db: ragnarok
 
 // MySQL Map Server
-map_server_ip: 127.0.0.1
+map_server_ip: mysql.railway.internal
 map_server_port: 3306
 map_server_id: root
-map_server_pw: ragnarok
+map_server_pw: SanZtvgUFAgXSPGjqozTYBoFoOcSGfuQ
 map_server_db: ragnarok
 
 // MySQL Web Server
-web_server_ip: 127.0.0.1
+web_server_ip: mysql.railway.internal
 web_server_port: 3306
 web_server_id: root
-web_server_pw: ragnarok
+web_server_pw: SanZtvgUFAgXSPGjqozTYBoFoOcSGfuQ
 web_server_db: ragnarok
 
 // MySQL Log Database
-log_db_ip: 127.0.0.1
+log_db_ip: mysql.railway.internal
 log_db_port: 3306
 log_db_id: root
-log_db_pw: ragnarok
+log_db_pw: SanZtvgUFAgXSPGjqozTYBoFoOcSGfuQ
 log_db_db: ragnarok
 log_codepage:
 log_login_db: loginlog
