--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -17,7 +17,7 @@ passwd: p1
 // The map server connects to the character server using this IP address.
 // NOTE: This is useful when you are running behind a firewall or are on
 // a machine with multiple interfaces.
-char_ip: 192.168.0.107
+char_ip: warnarok.railway.internal
 
 // The map server listens on the interface with this IP address.
 // NOTE: This allows you to run multiple servers on multiple interfaces
@@ -30,7 +30,7 @@ char_port: 6121
 // Map Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-map_ip: 190.251.142.16
+map_ip: warnarok-production.up.railway.app
 
 // Map Server Port
 map_port: 5121
