--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -34,7 +34,7 @@ login_port: 6900
 // Character Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-char_ip: warnarok-production.up.railway.app
+char_ip: tramway.proxy.rlwy.net
 
 // Character Server Port
 char_port: 6121
