--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -30,7 +30,7 @@ char_port: 6121
 // Map Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-map_ip: tramway.proxy.rlwy.net
+map_ip: 0.0.0.0
 
 // Map Server Port
 map_port: 5121
