--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -176,3 +176,4 @@ use_sql_db: no
 inter_server_conf: inter_server.yml
 
 import: conf/import/inter_conf.txt
+import: conf/import/99-railway-inter.conf
