--- a/conf/login_athena.conf
+++ b/conf/login_athena.conf
@@ -192,3 +192,4 @@ disable_webtoken_delay: 10000
 
 import: conf/inter_athena.conf
 import: conf/import/login_conf.txt
+import: conf/import/99-railway-network.conf
