Comment out hardcoded IP/port values in base configs to allow Railway environment variables to take precedence

--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -35,11 +35,11 @@ login_port: 6900
 // Character Server IP
 // The IP address which clients will use to connect.
 // Set this to what your server's public IP address is.
-char_ip: 127.0.0.1
+//char_ip: 127.0.0.1
 // TODO : IP publica del servidor EJ; 190.251.142.16
 
 // Character Server Port
-char_port: 6121
+//char_port: 6121
 
 //Time-stamp format which will be printed before all messages.
 //Can at most be 20 characters long.
