Add advertise_port configuration to allow separate listen and advertise ports

--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -41,6 +41,13 @@ login_port: 6900
 // Character Server Port
 //char_port: 6121
 
+// Character Server Advertised Endpoint
+// Override the host/port sent to the login server and clients when this server registers itself.
+// Useful when the server listens on an internal address but must advertise a public endpoint.
+// Defaults to char_ip/char_port when left unset.
+//advertise_host: example.com
+//advertise_port: 6121
+
 //Time-stamp format which will be printed before all messages.
 //Can at most be 20 characters long.
 //Common formats:
