--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -37,6 +37,12 @@ passwd: p1
 // Map Server Port
 //map_port: 5121
 
+// Map Server Advertised Endpoint
+// Override the host/port sent to the char server and clients for map connections.
+// Defaults to map_ip/map_port when unset so legacy single-network setups keep working.
+//advertise_host: example.com
+//advertise_port: 5121
+
 //Time-stamp format which will be printed before all messages.
 //Can at most be 20 characters long.
 //Common formats:
