--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -1,51 +1,29 @@
-# Build stage - se cachea si no hay cambios en código fuente
-FROM alpine:3.11 AS builder
-
-WORKDIR /rathena
-
-# Instalar dependencias de build
-RUN apk add --no-cache wget git cmake make gcc g++ gdb zlib-dev mariadb-dev ca-certificates linux-headers bash
-
-# Copiar solo archivos necesarios para configure (se cachea si no cambian)
-COPY configure Makefile.in ./
-COPY src/ src/
-COPY 3rdparty/ 3rdparty/
-
-# Configure (se cachea si configure no cambia)
-RUN ./configure --enable-packetver=20200902 --enable-web-server
-
-# Build solo lo que cambió
-RUN make server
-
-# Runtime stage - mucho más pequeño y rápido
+# Basado en tu Dockerfile existente pero optimizado para Railway
 FROM alpine:3.11
 
 WORKDIR /rathena
 
-# Instalar solo dependencias de runtime
-RUN apk add --no-cache wget mariadb-client bash gettext netcat-openbsd
+# Instalar dependencias (igual que tu Dockerfile actual)
+RUN apk add --no-cache wget git cmake make gcc g++ gdb zlib-dev mariadb-dev ca-certificates linux-headers bash valgrind netcat-openbsd
 
-# Instalar wait-for
+# Instalar wait-for (igual que tu Dockerfile actual)
 RUN wget https://raw.githubusercontent.com/eficode/wait-for/v2.2.2/wait-for -O /bin/wait-for && chmod +x /bin/wait-for
 
-# Copiar binarios compilados desde build stage
-COPY --from=builder /rathena/login-server /rathena/char-server /rathena/map-server /rathena/web-server ./
+# Copiar el código fuente completo
+COPY . .
 
-# Copiar archivos de configuración y datos
-COPY conf/ conf/
-COPY db/ db/
-COPY sql-files/ sql-files/
-COPY npc/ npc/
-# COPY log/ log/  <- ELIMINAR ESTA LÍNEA
+# Compilar automáticamente (esto es lo que hace tu 'builder' service)
+RUN ./configure --enable-packetver=20200902
+RUN make clean server
 
-# Script de inicio
-COPY start-railway.sh /start-railway.sh
-RUN chmod +x /start-railway.sh
-
-# Crear directorio de logs (se crea automáticamente)
+# Crear directorio de logs
 RUN mkdir -p /rathena/log
 
 # Exponer puertos
 EXPOSE 6900 6121 5121 8888
+
+# Script de inicio que ejecuta todos los servicios
+COPY start-railway.sh /start-railway.sh
+RUN chmod +x /start-railway.sh
 
 CMD ["/start-railway.sh"]
