--- a/tools/docker/docker-compose.yml
+++ b/tools/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
             context: .
             dockerfile: Dockerfile
         environment:
-            BUILDER_CONFIGURE: "--enable-packetver=20200902 --enable-web-server"
+            BUILDER_CONFIGURE: "--enable-packetver=20200902"
     
     login:
         image: "rathena:local"
