--- a/conf/map_athena.conf
+++ b/conf/map_athena.conf
@@ -17,7 +17,7 @@ passwd: p1
 // The map server connects to the character server using this IP address.
 // NOTE: This is useful when you are running behind a firewall or are on
 // a machine with multiple interfaces.
-char_ip: 0.0.0.0
+char_ip: warnarok-725af681.railway.internal
 
 // The map server listens on the interface with this IP address.
 // NOTE: This allows you to run multiple servers on multiple interfaces
